--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <h1>
         Hello World
     </h1>
-    <button id="storage">Store this item</button>
+    <!-- <button id="storage">Store this item</button> -->
 </body>
 <script src="popup.js"></script>
 <script src="background.js"></script>
