able to get extension console log

--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,8 @@
     <h1>
         Hello World
     </h1>
-    <!-- <button id="storage">Store this item</button> -->
+    <button id="storage">Store this item</button>
 </body>
-<script src="popup.js"></script>
-<script src="background.js"></script>
+<script type="module" src="background.js"></script>
+<script type="module" src="popup.js"></script>
 </html>
