using storage for list
Co-authored-by: Djaworski1 <Djaworski1@users.noreply.github.com>

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
         Hello World
     </h1>
     <button id="storage">Store this item</button>
+    <ul id="list"></ul>
 </body>
 <script type="module" src="background.js"></script>
 <script type="module" src="popup.js"></script>
