--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>
-        Hello World
+        Your Cart
     </h1>
     <button id="storage">Store this item</button>
     <ul id="list"></ul>
